--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body>
     <script>
-        var game = [{ q: "do you like pizza?", a: true },{},{},{},{},{},{},{},{},{}];
+        var game = [{ q: "do you like pizza?", a: true },{q: "do you like game?", a: true },{q: "do you have a dog?",a: false},{q: "do you like car?", a: "true"},{q: "do you like music?", a: true },{q: "do you watch anime?", a: true},{ q: "is Eren Yeager crazy?", a: true },{q: "do you like god of highschool?",a: true },{q: "do you like fortnite?", a: false},{q: "do you like apex legends?", a: true}];
     </script>
  </body>
  </html>
